// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render correctly LigneOfButton component render correctly when there is 3 buttons 1`] = `
<div
  className="command-line"
  style={
    Object {
      "gridRow": "2 / span 1",
    }
  }
>
  <div
    className="merge-btn"
    onClick={[MockFunction]}
  >
    <span>
      +
    </span>
  </div>
  <div
    className="simple-btn"
    onClick={[MockFunction]}
  >
    <span>
      -
    </span>
  </div>
  <div
    className="op-btn"
    onClick={[MockFunction]}
  >
    <span>
      *
    </span>
  </div>
</div>
`;

exports[`render correctly LigneOfButton component render correctly when there is 4 buttons 1`] = `
<div
  className="command-line"
  style={
    Object {
      "gridRow": "2 / span 1",
    }
  }
>
  <div
    className="simple-btn"
    onClick={[MockFunction]}
  >
    <span>
      +
    </span>
  </div>
  <div
    className="simple-btn"
    onClick={[MockFunction]}
  >
    <span>
      -
    </span>
  </div>
  <div
    className="simple-btn"
    onClick={[MockFunction]}
  >
    <span>
      *
    </span>
  </div>
  <div
    className="op-btn"
    onClick={[MockFunction]}
  >
    <span>
      /
    </span>
  </div>
</div>
`;

exports[`render correctly Quote page 1`] = `
<p
  style={
    Object {
      "color": "#4ab",
      "fontFamily": "Montserrat,sans-serif",
      "fontSize": "30px",
      "fontWeight": "bold",
      "lineHeight": "1.6",
      "marginLeft": "10%",
      "marginTop": "15%",
      "textAlign": "center",
      "width": "80%",
    }
  }
>
  Mathematics is not about numbers, equations computations,or algorithms: it is about understanding. -William Paul Thurston
</p>
`;

exports[`render correctly ResultIcone component 1`] = `
<div
  className="calculator-result"
>
   
  <span>
     
  </span>
   
</div>
`;

exports[`render correctly home page 1`] = `
<div
  style={
    Object {
      "margin": "5%",
      "width": "90%",
    }
  }
>
  <h2
    style={
      Object {
        "color": "rgb(133, 134, 147)",
        "fontFamily": "\\"Segoe UI\\", Arial, sans-serif",
        "marginBottom": "5%",
      }
    }
  >
     Welcome to our page! 
  </h2>
  <p
    style={
      Object {
        "color": "#4ab",
        "fontFamily": "Montserrat,sans-serif",
        "fontSize": "20px",
        "fontWeight": "bold",
        "lineHeight": "1.4",
        "textAlign": "center",
      }
    }
  >
    Everybody needs a Calculator at some point -- Full Screen, Fast Loading and FREE!
    <br />
    <span>
       Check it out! Math Magicians! 
    </span>
    <br />
    "Math Magicians" always available when you need to perform basic calculations such as addition, subtraction, multiplication, and division...
  </p>
</div>
`;

exports[`render correctly when there  1`] = `
<div
  className="container"
>
  <h2>
    Let's do some math!
  </h2>
  <div
    className="calculator-container"
  >
    <div
      className="calculator-result"
    >
       
      <span>
         
        0
      </span>
       
    </div>
    <div
      className="command-line"
      style={
        Object {
          "gridRow": "2 / span 1",
        }
      }
    >
      <div
        className="simple-btn"
        onClick={[Function]}
      >
        <span>
          AC
        </span>
      </div>
      <div
        className="simple-btn"
        onClick={[Function]}
      >
        <span>
          +/-
        </span>
      </div>
      <div
        className="simple-btn"
        onClick={[Function]}
      >
        <span>
          %
        </span>
      </div>
      <div
        className="op-btn"
        onClick={[Function]}
      >
        <span>
          ÷
        </span>
      </div>
    </div>
    <div
      className="command-line"
      style={
        Object {
          "gridRow": "3 / span 1",
        }
      }
    >
      <div
        className="simple-btn"
        onClick={[Function]}
      >
        <span>
          7
        </span>
      </div>
      <div
        className="simple-btn"
        onClick={[Function]}
      >
        <span>
          8
        </span>
      </div>
      <div
        className="simple-btn"
        onClick={[Function]}
      >
        <span>
          9
        </span>
      </div>
      <div
        className="op-btn"
        onClick={[Function]}
      >
        <span>
          x
        </span>
      </div>
    </div>
    <div
      className="command-line"
      style={
        Object {
          "gridRow": "4 / span 1",
        }
      }
    >
      <div
        className="simple-btn"
        onClick={[Function]}
      >
        <span>
          4
        </span>
      </div>
      <div
        className="simple-btn"
        onClick={[Function]}
      >
        <span>
          5
        </span>
      </div>
      <div
        className="simple-btn"
        onClick={[Function]}
      >
        <span>
          6
        </span>
      </div>
      <div
        className="op-btn"
        onClick={[Function]}
      >
        <span>
          -
        </span>
      </div>
    </div>
    <div
      className="command-line"
      style={
        Object {
          "gridRow": "5 / span 1",
        }
      }
    >
      <div
        className="simple-btn"
        onClick={[Function]}
      >
        <span>
          1
        </span>
      </div>
      <div
        className="simple-btn"
        onClick={[Function]}
      >
        <span>
          2
        </span>
      </div>
      <div
        className="simple-btn"
        onClick={[Function]}
      >
        <span>
          3
        </span>
      </div>
      <div
        className="op-btn"
        onClick={[Function]}
      >
        <span>
          +
        </span>
      </div>
    </div>
    <div
      className="command-line"
      style={
        Object {
          "gridRow": "6 / span 1",
        }
      }
    >
      <div
        className="merge-btn"
        onClick={[Function]}
      >
        <span>
          0
        </span>
      </div>
      <div
        className="simple-btn"
        onClick={[Function]}
      >
        <span>
          .
        </span>
      </div>
      <div
        className="op-btn"
        onClick={[Function]}
      >
        <span>
          =
        </span>
      </div>
    </div>
  </div>
</div>
`;
